--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -12,6 +12,20 @@ ENV LANG=C.UTF-8
 
 RUN nvcc --version
 
+# ADD Python PPA Repository
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && \
+    apt-get upgrade -y && \
+    apt-get install -y --no-install-recommends \
+        software-properties-common gpg-agent && \
+    add-apt-repository ppa:deadsnakes/ppa && \
+    apt-get update && \
+    apt-get remove -y software-properties-common && \
+    apt-get purge --auto-remove -y && \
+    apt-get clean
+
+RUN which gpg-agent
+
+# Install Python
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
         git \
@@ -19,19 +33,12 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
         cmake \
         ninja-build \
         build-essential \
-		checkinstall \
-		software-properties-common \
-    && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/* 
-
-
-# Install Python
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends \
         "python$PYTHON_VERSION-dev" \
 		"python$PYTHON_VERSION-distutils" \
 		python3-setuptools \
         python3-pip \
         "python$PYTHON_VERSION-venv" \
+        python-is-python3 \
 		libstdc++6 \
 		gcc-multilib\
 		libjpeg-dev\
