--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -8,25 +8,10 @@ ENV CUDA_VISIBLE_DEVICES=1
 # Python Version x.y
 ARG PYTHON_VERSION=3.6
 ARG PYLUCENE_VERSION=7.4.0
-# Uncomment to install specific version of poetry
-ENV LANG=C.UTF-8
 
 RUN nvcc --version
 
 # ADD Python PPA Repository
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && \
-    apt-get upgrade -y && \
-    apt-get install -y --no-install-recommends \
-        software-properties-common gpg-agent && \
-    add-apt-repository ppa:deadsnakes/ppa && \
-    apt-get update && \
-    apt-get remove -y software-properties-common && \
-    apt-get purge --auto-remove -y && \
-    apt-get clean
-
-RUN which gpg-agent
-
-# Install Python
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
         git \
@@ -34,28 +19,33 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
         cmake \
         ninja-build \
         build-essential \
-        "python$PYTHON_VERSION-dev" \
-		"python$PYTHON_VERSION-distutils" \
-		python3-setuptools \
+		checkinstall \
+		software-properties-common \
+    && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/* 
+
+
+# Install Python
+RUN add-apt-repository ppa:deadsnakes/ppa
+
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install --no-install-recommends \
+		python3-distutils \
+        python3-dev \
         python3-pip \
-        "python$PYTHON_VERSION-venv" \
-        python-is-python3 \
+        python3-venv \
+		python-is-python3 \
 		libstdc++6 \
 		gcc-multilib\
-		libjpeg-dev\
-		zlib1g-dev\
-		libc6 &&\
-    apt-get remove -y gpg-agent && \
-    apt-get purge --auto-remove -y && \
-    apt-get clean
+		libc6 \
+		 && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/* 
 
 RUN python3.6 --version
 RUN python3.6 -m pip install --upgrade pip
 RUN python3.6 -m pip install --upgrade Pillow
 
-RUN pwd
+#RUN pwd
 
-RUN export TMPDIR=`pwd`/tmp
+#RUN export TMPDIR=`pwd`/tmp
 
 
 # ======================== START OF ADDITIONAL INSTALLATION ========================
