--- a/containers/rencos-env/Dockerfile
+++ b/containers/rencos-env/Dockerfile
@@ -57,6 +57,14 @@ RUN python3.6 -m pip install --upgrade Pillow
 
 #RUN export TMPDIR=`pwd`/tmp
 
+ENV CONDA_DIR /opt/conda
+RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && \
+    /bin/bash ~/miniconda.sh -b -p /opt/conda
+
+# Put conda in path so we can use conda activate
+ENV PATH=$CONDA_DIR/bin:$PATH
+
+
 
 # ======================== START OF ADDITIONAL INSTALLATION ========================
 
